# ply-ssvep-stimuli

./: .gitignore  CMakeLists.txt
doc/: Doxyfile.extra.in
include/: CMakeLists.txt
include/bci-interface/DisplayObject/: PLYObject.h  PLYSSVEPStimulus.h
src/: CMakeLists.txt  PLYMesh.cpp  PLYMesh.h  PLYObject.cpp  PLYSSVEPStimulus.cpp
test/: CMakeLists.txt  testply-ssvep-stimuli.cpp
test/models/: can.ply
