#
#  Copyright
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)

SET(PROJECT_NAME ply-ssvep-stimuli)
SET(PROJECT_CONTACT )
SET(PROJECT_DESCRIPTION "")
SET(PROJECT_URL "")

SET(CXX_DISABLE_WERROR True)
SET(CUSTOM_HEADER_DIR ${PROJECT_NAME})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

#SET(PROJECT_VERSION 0.1)

#
#  Specific CmakeModules
#
SETUP_PROJECT(FALSE)

#
#  Look for dependencies
#

find_package( Boost 1.40.0)

IF(Boost_FOUND)
    MESSAGE(STATUS "Found Boost")
    MESSAGE(STATUS "Boost_INCLUDE_DIRS ${Boost_INCLUDE_DIRS}")
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

find_package(SFML COMPONENTS oculus graphics window system)

INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(test)

SETUP_PROJECT_FINALIZE()
